syntax = "proto3";

package hello;

option go_package = "server/pb";

service Greeter {
    // 定义方法
    rpc SayHello(HelloRequest) returns (HelloResponse) {};
}

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}